logs/awsmanager.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/awsmanager'...
Compiling './lib/python3.5/site-packages/awsmanager/iam.py'...
***   File "./lib/python3.5/site-packages/awsmanager/iam.py", line 18
    print "\n##### REMOVE ME ####: Name: [%s] of IAM group [%s]\n\n" % (policy_name, group_name)
                                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/awsmanager/instances.py'...
***   File "./lib/python3.5/site-packages/awsmanager/instances.py", line 7
    print 'No instance not found in this region'
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/awsmanager/options.py'...
***   File "./lib/python3.5/site-packages/awsmanager/options.py", line 8
    print 'Cannot both pause and unpause an instance!'
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/awsmanager/security_groups.py'...
***   File "./lib/python3.5/site-packages/awsmanager/security_groups.py", line 9
    print "Could not find any rules for group %s, so not revoking existing ones" % group.id
                                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/awsmanager/snapshots.py'...
***   File "./lib/python3.5/site-packages/awsmanager/snapshots.py", line 6
    print "Checking snapshots exist..."
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/awsmanager/utils.py'...
***   File "./lib/python3.5/site-packages/awsmanager/utils.py", line 11
    print "Error getting all instance data in [%s], bad credentials ?" % __file__
                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
